--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="col-md-4 offset-md-4">
             <button id="login" class="btn btn-primary w-100">Login</button>
           </div>
-          <p class="text-center">Don't Have an Account? <a href="/signup.html">Sign Up</a></p>
+          <p class="text-center">Don't Have an Account? <a href="./signup.html">Sign Up</a></p>
         </div>
       </div>
     </section>
