--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,7 @@
           <div class="col-md-4 offset-md-4">
             <button id="sign" class="btn btn-primary w-100">Signin</button>
           </div>
-          <p class="text-center">You have an account? <a href="/index.html">Signin</a></p>
+          <p class="text-center">You have an account? <a href="./index.html">Signin</a></p>
         </div>
       </div>
     </section>
