--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 class="form-control"
               />
               <div class="icon position-absolute">
-                <i id="eye" class="fa-regular d-block  fa-eye"></i>
+                <i id="eye" class="fa-regular d-block fa-eye"></i>
                 <i id="eye-slash" class="fa-regular d-none fa-eye-slash"></i>
               </div>
             </div>
@@ -50,9 +50,13 @@
         </div>
       </div>
     </section>
+    <div class="ocean">
+      <div class="wave"></div>
+      <div class="wave"></div>
+    </div>
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script src="js/index.js"></script>
   </body>
 </html>
