--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,13 @@
         </div>
       </div>
     </section>
+    <div class="ocean">
+      <div class="wave"></div>
+      <div class="wave"></div>
+    </div>
 
+
+    
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/signup.js"></script>
